[package]
name = "webhook"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2018"
license = "MIT"

[dependencies]
actix-web = "3.3"
base64 = "0.13.0"
dotenv = "0.15"
env_logger = "0.8"
form_urlencoded = "1.0"
futures-util = "0.3"
hex = "0.4"
ipnetwork = "0.18"
json_dotpath = "1.0"
log = "0.4"
regex = "1.4"
ring = "0.16"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
thiserror = "1.0"
