[package]
name = "webhook"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4.0"
base64 = "0.21"
env_logger = "0.10"
envir = "0.2"
form_urlencoded = "1.0"
futures-util = "0.3"
hex = "0.4"
ipnetwork = "0.20"
json_dotpath = "1.0"
log = "0.4"
regex = "1.4"
ring = "0.16"
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
users = "0.11.0"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
