[package]
name = "webhook"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2024"
license = "MIT"

[dependencies]
actix-web = "4.0"
base64 = "0.22"
envir = "1.0"
form_urlencoded = "1.0"
futures-util = "0.3"
hex = "0.4"
json_dotpath = "1.0"
log = "0.4"
regex = "1.4"
ring = "0.17"
serde_json = "1.0"
serde_yaml_ng = "0.10"
sysinfo = "0.34"
thiserror = "2.0"

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.ipnetwork]
version = "0.21"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
